@@ -2372,7 +2372,12 @@ aclChecklistCreate(const acl_access * A, request_t * request, const char *ident)
     cbdataLock(A);
     if (request != NULL) {
 	checklist->request = requestLink(request);
-	checklist->src_addr = request->client_addr;
+#if FOLLOW_X_FORWARDED_FOR
+	if (Config.onoff.acl_uses_indirect_client) {
+	    checklist->src_addr = request->indirect_client_addr;
+	} else
+#endif /* FOLLOW_X_FORWARDED_FOR */
+	    checklist->src_addr = request->client_addr;
 	checklist->my_addr = request->my_addr;
 	checklist->my_port = request->my_port;
     }
