@@ -319,7 +319,12 @@ delayClient(clientHttpRequest * http)
     r = http->request;
 
     memset(&ch, '\0', sizeof(ch));
-    ch.src_addr = r->client_addr;
+#if FOLLOW_X_FORWARDED_FOR
+    if (Config.onoff.delay_pool_uses_indirect_client) {
+	ch.src_addr = r->indirect_client_addr;
+    } else
+#endif /* FOLLOW_X_FORWARDED_FOR */
+	ch.src_addr = r->client_addr;
     ch.my_addr = r->my_addr;
     ch.my_port = r->my_port;
     ch.conn = http->conn;
